Sat May 22 21:54:58 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/http/test_connection.rb (TestHTTP::HTTPConnectionTest#test_connection_refused_in_request):
	  Wrong exception to assert.

Sat May 22 21:03:16 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_modenum_mode): return "r" for O_RDONLY|O_APPEND.
	  [ruby-dev:40379]

Sat May 22 20:51:39 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/resolv.rb (Resolv::DNS::Config#nameserver_port): 1.8.7
	  specific tweaks

Sat May 22 20:51:09 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: fix [ruby-core:28144] reported by Hans de Graaff.
	  (Resolv::DNS#make_requester): pass nameserver_port to
	  UnconnectedUDP.new.
	  (Resolv::DNS.bind_random_port): change the is_ipv6 argument to
	  bind_host.
	  (Resolv::DNS::Requester#initialize): change instance variable to
	  store multiple sockets.
	  (Resolv::DNS::Requester#request): pass readable sockets to
	  recv_reply.
	  (Resolv::DNS::Requester#close): close all sockets.
	  (Resolv::DNS::Requester::UnconnectedUDP#initialize): allocate
	  a socket for each address family of name servers.
	  (Resolv::DNS::Requester::UnconnectedUDP#recv_reply): read from the
	  passwd readable socket.
	  (Resolv::DNS::Requester::UnconnectedUDP#sender): use appropriate
	  socket for the target nameserver.
	  (Resolv::DNS::Requester::ConnectedUDP): follow the instance variable
	  change.
	  (Resolv::DNS::Requester::TCP#sender): ditto.
	  (Resolv::DNS::Config#nameserver_port): new method.

Sat May 22 19:46:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#request): close @socket only after
	  started.  [ruby-core:28028]

Sat May 22 19:36:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): reverted r25975.  [ruby-dev:39931]
	  [ruby-dev:40059]

	* eval.c (rb_mod_define_method): return original block but not
	  bound block.  [ruby-core:26984]

Thu May 20 16:28:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
