@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-05-22"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20100522
-#define RUBY_PATCHLEVEL 263
+#define RUBY_PATCHLEVEL 264
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
